--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,9 @@ branding:
   icon: 'shield'
   color: 'red'
 inputs:
+  bin_path:
+    description: 'The location that Crowdstrike should use for the binary'
+    required: false
   falcon_client_id:
     description: 'CrowdStrike API Client ID for authentication'
     required: true
@@ -150,6 +153,7 @@ runs:
       run: python $GITHUB_ACTION_PATH/fcs_download.py
       shell: bash
       env:
+        INPUT_FALCON_BIN_PATH: ${{ inputs.bin_path }}
         INPUT_FALCON_CLIENT_ID: ${{ inputs.falcon_client_id }}
         INPUT_FALCON_REGION: ${{ inputs.falcon_region }}
         INPUT_VERSION: ${{ inputs.version }}
