fix: adds timeout support for image scan, cleans up docs, and ensure output path dir exists for iac (#41)
* fix: adds timeout to image scanning

* docs: update docs to show diffs in formats and paths

* fix: create output path for iac if it doesn't exist

This prevents the need for manual mkdir commands

--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -33,6 +33,7 @@ jobs:
           image: nginx:latest
           report_formats: sarif
           minimum_severity: medium
+          timeout: 600
         env:
           FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
 
@@ -66,9 +67,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Create IaC scan results directory
-        run: mkdir iac-scan-results
 
       - name: Test IaC scan
         uses: ./
