feat: add project_name parameter for IaC scans
Adds optional project_name input parameter to enable custom project identification
in the Falcon console, addressing multi-repository identification challenges.

Changes:
- Add project_name input parameter to action.yml (IaC scans only)
- Update fcs-scan.sh to process --project-name CLI flag for IaC mode
- Add documentation and examples in README.md
- Include test coverage in workflow for the new parameter
- Fix README structure and consistency issues

Resolves #35

--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -77,6 +77,7 @@ jobs:
           path: tests/
           output_path: iac-scan-results/
           report_formats: sarif
+          project_name: fcs-action-test-project
         env:
           FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
 
