ci: security hardening for workflows

--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -5,6 +5,9 @@ on:
   pull_request_target:
     types: [labeled]
 
+permissions:  # added using https://github.com/step-security/secure-repo
+  contents: read
+
 jobs:
   test-ia-scan:
     if: |
@@ -20,8 +23,13 @@ jobs:
       actions: read
       contents: read
     steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
+        with:
+          egress-policy: audit
+
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
       - name: Test basic image scan
         uses: ./
@@ -46,7 +54,7 @@ jobs:
           cat image-scan-results/*.sarif
 
       - name: Upload sarif file
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@d3ced5c96c16c4332e2a61eb6f3649d6f1b20bb8 # v3.31.5
         with:
           sarif_file: image-scan-results/
 
@@ -65,8 +73,13 @@ jobs:
       actions: read
       contents: read
     steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
+        with:
+          egress-policy: audit
+
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
       - name: Test IaC scan
         uses: ./
@@ -94,7 +107,7 @@ jobs:
           fi
 
       - name: Upload sarif file
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@d3ced5c96c16c4332e2a61eb6f3649d6f1b20bb8 # v3.31.5
         if: always() && hashFiles('iac-scan-results/*.sarif') != ''
         with:
           sarif_file: iac-scan-results
@@ -114,8 +127,13 @@ jobs:
       actions: read
       contents: read
     steps:
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
+        with:
+          egress-policy: audit
+
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
       - name: Test IaC scan
         uses: ./
@@ -136,7 +154,7 @@ jobs:
           find . -name "*.sarif" -type f || echo "No SARIF files found"
 
       - name: Upload sarif file
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@d3ced5c96c16c4332e2a61eb6f3649d6f1b20bb8 # v3.31.5
         if: always() && hashFiles('./*.sarif') != ''
         with:
           sarif_file: './scan-results.sarif'
